# testingservice

./: README.md  Readme
backend/: .env-non-dev  Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 342feb0c0770_create_answes_right_answer_question_.py  53ad7421f161_create_users_table.py  6a990df34c64_tests_table_uselist_true_quesions.py  73661668a0ce_create_testtable.py  752cd04ffebe_upgrade_test.py  8f78f1c1ebc2_set_1_or_more_rightanswers.py  8ffesff1c1ebc2_add_all_tables_new.py  a23ee86306eb_completed_tests_users_table.py  c727ab87b879_test_nullable_true_scores.py  d4fe928728ab_create_test_table.py  f05f40dc80ac_set_bool_right_anwers.py
backend/answer/: schemas.py
backend/answer/models/: __init__.py  answer.py
backend/api/: api.py  deps.py
backend/api/api_v1/: answer.py  completed_tests_users.py  question.py  right_answer.py  test.py  user.py
backend/auth/: __init__.py  user_manager.py
backend/auth/models/: __init__.py  user.py
backend/auth/schemas/: user.py
backend/completed_tests_users/: schemas.py
backend/completed_tests_users/models/: __init__.py  completed_tests_users.py
backend/db/: __init__.py  base.py  base_repository.py
backend/fixtures/: init.sql
backend/question/: schemas.py
backend/repositories/: answer.py  completed_tests_users.py  question.py  right_answer.py  test.py  user.py
backend/right_answer/: schemas.py
backend/services/: answer.py  completed_tests_users.py  question.py  right_answer.py  test.py  user.py
backend/test/: schemas.py
(+24 files in other folders)
