[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["levchig737 <levchekarev3@gmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
httpx = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-multipart = "^0.0.9"
asyncpg = "^0.29.0"
psycopg2 = {extras = ["binaries", "pool"], version = "^2.9.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
